fixed thumb width for less jumpy list

--- a/client/_photos.scss
+++ b/client/_photos.scss
@@ -6,6 +6,8 @@
     list-style: none;
 
     &__item {
+        width: 75px; // depends on thumb size flickr
+        height: 75px;
         margin: $gutter_small;
         background-color: #fff;
     }
